variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:8: error: not found: value estSurBuscuit
  if (estSurBuscuit()==true) {
      ^